infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: databases
  labels:
    name: databases
    tier: data
---
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
  labels:
    name: messaging
    tier: messaging
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
    tier: observability
